--- a/VMS/Areas/Admin/Views/Volunteer/Upsert.cshtml
+++ b/VMS/Areas/Admin/Views/Volunteer/Upsert.cshtml
@@ -72,9 +72,8 @@
                                 <label asp-for="VolunteerPrefersCenter">Prefered Center</label>
                             </div>
                             <div class="col-5">
-                                <label>Select a Volunteer Center:</label>
                                 <select asp-for="VolunteerPrefersCenter" class="form-control">
-                                    <!--  <span asp-validation-for="VolunteerPrefersCenter" class="text-danger"></span> -->
+                                    <option value="" disabled selected>Select a Center</option>
                                     <option value="@SD.Center_Emergency">Medical Emergency</option>
                                     <option value="@SD.Center_Medical">Medical</option>
                                     <option value="@SD.Center_Mental">Mental Health</option>
@@ -84,6 +83,7 @@
                                     <option value="@SD.Center_Homeless ">Homeless Shelter</option>
                                     <option value="@SD.Center_Pet">Pet</option>
                                 </select>
+                                <span asp-validation-for="VolunteerPrefersCenter" class="text-danger"></span>
                             </div>
                         </div>
 
@@ -102,7 +102,6 @@
                             </div>
                             <div class="col-5">
                                 <input asp-for="Availability" class="form-control" />
-                                <span asp-validation-for="Availability" class="text-danger"></span>
                             </div>
                         </div>
 
@@ -218,13 +217,13 @@
                             <label asp-for="ApprovalStatus">Approval Status</label>
                         </div>
                         <div class="col-5">
-                            <label>Select Approval Status:</label>
                             <select asp-for="ApprovalStatus" class="form-control">
-                                <!--  <span asp-validation-for="ApprovalStatus" class="text-danger"></span>-->
+                                <option value="" disabled selected>Select a Status</option>
                                 <option value="@SD.Status_Approved">Approved</option>
                                 <option value="@SD.Status_Pending">Pending Approval</option>
                                 <option value="@SD.Status_Disapproved">Disapproved</option>
                             </select>
+                            <span asp-validation-for="ApprovalStatus" class="text-danger"></span>
                         </div>
                     </div>
 
