--- a/VMS/Areas/User/Views/Home/Index.cshtml
+++ b/VMS/Areas/User/Views/Home/Index.cshtml
@@ -1,60 +1,22 @@
 ﻿@model VMS.Models.ViewModels.LoginViewModel
 @{
-    ViewData["Title"] = "Home Page";
     Layout = "_Layout";
 }
 
-<br />
+<br/>
 <div class="text-center">
-    <h1 class="display-4"><i>Volunteer Management System</i></h1>
+    <h1 class="col-6 offset-3 text-center" style="color: white">
+        <i>Volunteer Management System</i>
+    </h1>
 </div>
-<br />
-<h2 class="text-primary">Welcome</h2>
-<br /><p>Please log in to see additional options.</p>
-      <p>Additional options are available for admins only.</p>
-      <p>If you are logged in and do not see additional options, your user role is not an admin.</p>
-
-@*<div class="row" style="margin-top: 5%">
-        <div class="col-3">
-            <form id="login" method="post">
-                <div class="form-group">
-                    <label asp-for="UserName">User Name:</label>
-                    <input asp-for="UserName" class="form-control" type="text" id="UserName" value="" />
-                    <span asp-validation-for="UserName" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Password">Password:</label>
-                    <input asp-for="Password" class="form-control" type="password" id="Password" value="" />
-                    <span asp-validation-for="Password" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <button id="login_submit" type="submit" class="btn btn-primary">Log in</button>
-                    <button id="login_clear" type="reset" class="btn btn-outline-primary">Reset</button>
-                </div>
-                Note to self: Justin Stop Screwing up form tags! -- Slow Down!
-            </form>
-
-        </div>
-    </div>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 
-    @if (ViewBag.Message != null)
-    {
-        <script>
-            swal({
-                title: "Failed Login",
-                text: "Please try again",
-                icon: "error"
-            });
-        </script>
-    }*@
 
-
-@section Scripts{
-    <partial name="_ValidationScriptsPartial" />
-
+@section head{
+    <style type="text/css">
+        body {
+            background-image: url('/Images/background.jpg');
+            background-size: cover
+        }
+    </style>
 }
-
-
-
