--- a/VMS/Areas/User/Views/Home/Index.cshtml
+++ b/VMS/Areas/User/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
 @section head{
     <style type="text/css">
         body {
-            background-image: url('/Images/background.jpg');
+            background-image: url('/Images/backgrounds/index.jpg');
             background-size: cover
         }
     </style>
