Cleaned Removed using statements Inverted if's wehre possilbe Rewrote Username = Input.Name instead of Email for future displays in the layout page <-- This will only work on new users now. One in db will still display email instead. Admin@gmail.com for example

--- a/VMS/Views/Shared/_Layout.cshtml
+++ b/VMS/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                     @if (User.IsInRole(SD.Role_Admin))
                     {
                         <li class="nav-item">
-                            <a class="nav-link text-success" asp-area="Admin" asp-controller="Admin" asp-action="Index">Admin Interface</a>
+                            <a class="nav-link" asp-area="Admin" asp-controller="Admin" asp-action="Index">Admin Interface</a>
                         </li>
                     }
                 </ul>
