--- a/VMS/Views/Shared/_Layout.cshtml
+++ b/VMS/Views/Shared/_Layout.cshtml
@@ -27,14 +27,23 @@
 
             <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                 <partial name="_LoginPartial"/>
-                <ul class="navbar-nav flex-grow-1">
+                <div class="navbar-nav flex-grow-1">
                     @if (User.IsInRole(SD.Role_Admin))
                     {
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="Admin" asp-controller="Admin" asp-action="Index">Admin Interface</a>
-                        </li>
+                        <div class="dropdown">
+                            <button class="btn dropdown-toggle text-white" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Admin Options
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item" asp-area="Admin" asp-controller="Admin" asp-action="Index">Admin Interface</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" asp-area="Admin" asp-controller="Opportunity" asp-action="Index">Opportunity Menu</a>
+                                <a class="dropdown-item" asp-area="Admin" asp-controller="Volunteer" asp-action="Index">Volunteer Menu</a>
+
+                            </div>
+                        </div>
                     }
-                </ul>
+                </div>
             </div>
         </div>
     </nav>
