fixed image display for Register page

--- a/VMS/Areas/Identity/Pages/Account/Register.cshtml
+++ b/VMS/Areas/Identity/Pages/Account/Register.cshtml
@@ -37,11 +37,12 @@
                 <button type="submit" class="btn btn-primary">Register</button>
             </form>
         </div>
-        <div class="col-md-4 offset-md-4 p-2 shadow-lg d-none d-md-block">
-            <img src="~/images/garden.jpg" style="width: 100%" alt="whatever" />
+        <div class="col-md-4 offset-md-3 p-2 d-none d-md-block align-self-center">
+            <img src="~/images/soup.jpg" style="width: 100%; border-radius: 50%" alt="Soup Kitchen" />
         </div>
     </div>
 </div>
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial"/>
