--- a/VMS/Areas/Identity/Pages/Account/Login.cshtml
+++ b/VMS/Areas/Identity/Pages/Account/Login.cshtml
@@ -37,8 +37,8 @@
                 </form>
             </section>
         </div>
-        <div class="col-md-4 offset-md-4 p-2 shadow-lg d-none d-md-block" >
-            <img src="~/images/garden.jpg" style="width: 100%" alt="Garden Volunteers"/>
+        <div class="col-md-4 offset-md-4 p-2 d-none d-md-block" >
+            <img src="~/images/garden.jpg" style="width: 100%; padding:4px; border: 4px solid black; border-radius: 8px" alt="Garden Volunteers"/>
         </div>
     </div>
 </div>
