--- a/VMS/Areas/Admin/Views/Volunteer/Index.cshtml
+++ b/VMS/Areas/Admin/Views/Volunteer/Index.cshtml
@@ -4,10 +4,10 @@
     Layout = "_Layout";
 }
 
-<br />
+<br/>
 <h1 class="text-primary">Manage Volunteers</h1>
-<br />
-<br />
+<br/>
+<br/>
 <div class="row">
     <div class="col-6">
         <h2 class="text-primary">Volunteer List</h2>
@@ -16,7 +16,7 @@
         <a class="btn btn-primary" asp-action="Upsert"><i class="fas fa-plus"></i> &nbsp; Add New Volunteer</a>
     </div>
 </div>
-<br />
+<br/>
 <div class="dropdown">
     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Change Volunteer Filter
@@ -38,19 +38,19 @@
 </div>
 
 <div class="p-4 border rounded">
-    <table id="tblData" class="table table-striped table-bordered" style="width:100%">
+    <table id="tblData" class="table table-striped table-bordered" style="width: 100%">
         <thead class="thead-dark">
-            <tr class="table-info">
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Approval Status</th>
-                <th>Active</th>
-                <th>Availability</th>
-                <th>Driver's License</th>
-                <th>Sociel Security</th>
-                <th></th>           @*extra header for Matches button*@
-                <th></th>           @*extra header for the Edit and Delete buttons*@
-            </tr>
+        <tr class="table-info">
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Approval Status</th>
+            <th>Active</th>
+            <th>Availability</th>
+            <th>Driver's License</th>
+            <th>Social Security</th>
+            <th></th> @*extra header for Matches button*@
+            <th></th> @*extra header for the Edit and Delete buttons*@
+        </tr>
         </thead>
     </table>
 </div>
