--- a/VMS/Areas/Admin/Views/Opportunity/Upsert.cshtml
+++ b/VMS/Areas/Admin/Views/Opportunity/Upsert.cshtml
@@ -1,4 +1,4 @@
-@model VMS.Models.Opportunity
+@model Opportunity
 @using VMS.Utility
 
 @{
@@ -6,7 +6,7 @@
     var title = "Create Opportunity";
 }
 
-<br />
+<br/>
 <form method="post">
     <div class="row p-3 border">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -25,7 +25,7 @@
                     <label asp-for="OpportunityName">Opportunity Name</label>
                 </div>
                 <div class="col-6">
-                    <input asp-for="OpportunityName" class="form-control" />
+                    <input asp-for="OpportunityName" class="form-control"/>
                     <span asp-validation-for="OpportunityName" class="text-danger"></span>
                 </div>
             </div>
@@ -34,7 +34,7 @@
                     <label asp-for="DatePosted">Date Posted</label>
                 </div>
                 <div class="col-6">
-                    <input type="date" asp-for="DatePosted" class="form-control" value="yyyy-mm-dd" min="2000-01-01" />
+                    <input type="date" asp-for="DatePosted" class="form-control" value="yyyy-mm-dd" min="2000-01-01"/>
                     <span asp-validation-for="DatePosted" class="text-danger"></span>
                 </div>
             </div>
@@ -58,7 +58,7 @@
                 </div>
             </div>
 
-            <input type="hidden" asp-for="VolunteerId" class="form-control" />
+            <input type="hidden" asp-for="VolunteerId" class="form-control"/>
             <span asp-validation-for="VolunteerId" class="text-danger"></span>
 
             <div class="form-group row">
@@ -66,18 +66,18 @@
                     <label asp-for="IsOpen">Open Opportunity</label>
                 </div>
                 <div class="col-3">
-                    <input type="checkbox" asp-for="IsOpen" class="form-control" />
+                    <input type="checkbox" asp-for="IsOpen" class="form-control"/>
                 </div>
             </div>
             <div class="form-group row">
                 <div class="col-8 offset-4">
                     @if (Model.Id != 0)
                     {
-                        <partial name="_EditAndBackToListButton" model="Model.Id" />
+                        <partial name="_EditAndBackToListButton" model="Model.Id"/>
                     }
                     else
                     {
-                        <partial name="_CreateAndBackToListButton" />
+                        <partial name="_CreateAndBackToListButton"/>
                     }
                 </div>
             </div>
@@ -87,8 +87,5 @@
 
 @section scripts
 {
-    <partial name="_ValidationScriptsPartial" />
+    <partial name="_ValidationScriptsPartial"/>
 }
-
-
-
